--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,13 +2,12 @@
     <string name="app_name">ProjetSmartphone</string>
     <string name="title_activity_maps">MapsActivity</string>
     <string name="carte">Carte</string>
-    <string name="liste_itineraire">Liste itineraire</string>
     <string name="choix_itineraire">Choix itineraire</string>
-    <string name="list_fragment">List Fragment</string>
     <string name="map_fragment">Map Fragment</string>
     <string name="custom_map_fragment">Custom Map Fragment</string>
-    <string name="save">Save</string>
+    <string name="save">Sauvegarde</string>
     <string name="vitesse_noeuds">Vitesse (Noeuds):</string>
     <string name="longitude">Longitude:</string>
     <string name="latitude">Latitude:</string>
+    <string name="accelerometer">Accelerometre</string>
 </resources>
